--- a/public/now.json
+++ b/public/now.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "alias": "ljelias-bookmarks-app",
+  "alias": "ljelias-noteful-app",
   "name": "noteful-app",
   "routes": [
       {
